# EmbeddedSystemsWithCMakeAndVSCode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  samd_experiments.code-workspace
CoOp_Schedular/: task_schedular.cpp  task_schedular.h
Submodules/: readme.md
devices/sensors/: IPressure.h  ISensor.h  LPS25.cpp  LPS25.h
projects/: CMakeLists.txt  CmakeLists.txt
projects/I2C_Scan_Bus/: CMakeLists.txt  CmakeLists.txt  main.cpp
projects/OutputBuildConfigFlags/: CmakeLists.txt
projects/SAMD21_X_PLAINED_PRO/I2C_Scan_Bus/: CMakeLists.txt  I2C_Scan_Bus.jdebug  asf.h  main.cpp
projects/SAMD21_X_PLAINED_PRO/SeggerRttPrintfTest/: CMakeLists.txt  SeggerRttPrintfTest.code-workspace  main.c
projects/SAMD21_X_PLAINED_PRO/blinky/: CMakeLists.txt  blinky.jdebug
projects/SAMD21_X_PLAINED_PRO/helloworld/: CMakeLists.txt
projects/SAMD21_X_PLAINED_PRO/read_pot/: CMakeLists.txt  read_pot_asf.code-workspace
projects/SAME70_X_PLAINED_ULTRA/: CMakeLists.txt
projects/SAME70_X_PLAINED_ULTRA/blinky/: CMakeLists.txt  asf.h  blinky_asf.code-workspace  main.cpp
projects/SeggerRttPrintfTest/: CMakeLists.txt  CmakeLists.txt  SeggerRttPrintfTest.code-workspace  SeggerRttPrintfTest.jdebug  main.c  main.cpp
projects/blinky/: CMakeLists.txt  CmakeLists.txt  blinky.code-workspace  blinky.jdebug  main.cpp
projects/blinky/cmsis/: samd21g15b_flash.ld
projects/blinky_asf/: CMakeLists.txt  CmakeLists.txt  asf.h  blinky.jdebug  main.cpp
projects/blinky_asf/cmsis/: samd21j18a_flash.ld
projects/helloworld/: CMakeLists.txt  CmakeLists.txt  asf.h  conf_uart_serial.h  helloworld.jdebug  main.cpp
projects/helloworld/cmsis/: samd21g15b_flash.ld
projects/helloworld_asf/: CMakeLists.txt  CmakeLists.txt  helloworld.jdebug  helloworld_asf.code-workspace
projects/i2c_devices_on_bus/: CmakeLists.txt  asf.h  main.cpp
projects/i2c_devices_on_bus_asf/: CmakeLists.txt  i2c_devices_on_bus_asf.code-workspace  i2c_devices_on_bus_asf.jdebug
projects/read_pot/: CMakeLists.txt  CmakeLists.txt  asf.h  bsp.h  main.c  main.cpp  read_pot.jdebug  read_pot_asf.code-workspace  tasks.cpp  tasks.h
projects/read_pot/cmsis/: samd21g15b_flash.ld
projects/read_pot_asf/: CMakeLists.txt  CmakeLists.txt  bsp.cpp  main.cpp  read_pot.jdebug  read_pot_asf.code-workspace
projects/rocketry_proto1/: CmakeLists.txt  main.cpp  rocketry_proto1.jdebug
projects/rocketry_proto1/cmsis/: samd21g18a_flash.ld
schedular/: Manager.cpp  Manager.h  Task.cpp  Task.h
scheduler/: Manager.cpp  Manager.h  ManagerConfig.h  Task.cpp  Task.h
tools/SEGGER_RTT_V754b/Config/: SEGGER_RTT_Conf.h
tools/SEGGER_RTT_V754b/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
tools/SEGGER_RTT_V754b/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
tools/SEGGER_RTT_V754b/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
tools/cmake_files/: arm-none-eabi-gcc.cmake  gccFlags.cmake  utils.cmake
tools/svd/: ATSAME70J19.svd  ATSAME70J19B.svd  ATSAME70J20.svd  ATSAME70J20B.svd  ATSAME70J21.svd  ATSAME70J21B.svd  ATSAME70N19.svd  ATSAME70N19B.svd  ATSAME70N20.svd  ATSAME70N20B.svd  ATSAME70N21.svd  ATSAME70N21B.svd  ATSAME70Q19.svd  ATSAME70Q19B.svd  ATSAME70Q20.svd  ATSAME70Q20B.svd  ATSAME70Q21.svd  ATSAME70Q21B.svd
xdk-asf-3.51.0/common/boards/: board.h
xdk-asf-3.51.0/sam0/applications/getting-started/samd10d14a_samd10_xplained_mini/gcc/: getting-started_flash.elf  getting-started_flash.hex  getting-started_flash.lss  getting-started_flash.map  getting-started_flash.sym
xdk-asf-3.51.0/sam0/applications/getting-started/samd10d14a_samd10_xplained_mini/gcc/sam0/applications/getting-started/: main.d
xdk-asf-3.51.0/sam0/applications/getting-started/samd10d14a_samd10_xplained_mini/gcc/sam0/boards/samd10_xplained_mini/: board_init.d
xdk-asf-3.51.0/sam0/applications/getting-started/samd10d14a_samd10_xplained_mini/gcc/sam0/drivers/extint/: extint_callback.d
xdk-asf-3.51.0/sam0/applications/getting-started/samd10d14a_samd10_xplained_mini/gcc/sam0/drivers/sercom/: sercom.d  sercom_interrupt.d
xdk-asf-3.51.0/sam0/applications/getting-started/samd10d14a_samd10_xplained_mini/gcc/sam0/drivers/tc/: tc_interrupt.d
xdk-asf-3.51.0/sam0/applications/getting-started/samd10d14a_samd10_xplained_mini/gcc/sam0/utils/stdio/: read.d  write.d
xdk-asf-3.51.0/sam0/applications/led_toggle/samd10_xplained_mini/: led_toggle.jdebug
xdk-asf-3.51.0/sam0/applications/led_toggle/samd10_xplained_mini/gcc/: led_toggle_flash.elf  led_toggle_flash.hex  led_toggle_flash.lss  led_toggle_flash.map  led_toggle_flash.sym
xdk-asf-3.51.0/sam0/applications/led_toggle/samd10_xplained_mini/gcc/common/utils/interrupt/: interrupt_sam_nvic.d
xdk-asf-3.51.0/sam0/applications/led_toggle/samd10_xplained_mini/gcc/sam0/applications/led_toggle/: led_toggle.d
xdk-asf-3.51.0/sam0/applications/led_toggle/samd10_xplained_mini/gcc/sam0/boards/samd10_xplained_mini/: board_init.d
xdk-asf-3.51.0/sam0/applications/led_toggle/samd10_xplained_mini/gcc/sam0/drivers/port/: port.d
xdk-asf-3.51.0/sam0/applications/led_toggle/samd10_xplained_mini/gcc/sam0/drivers/system/: system.d
xdk-asf-3.51.0/sam0/applications/usb_msc_bootloader/bootloader/samd21j18a_samd21_xplained_pro/gcc/: asf.h
xdk-asf-3.51.0/sam0/applications/usb_msc_bootloader/firmware_generator/samd21j18a_samd21_xplained_pro/iar/: asf.h
xdk-asf-3.51.0/sam0/boards/samd21_adafruit_feather_m0_proto/: adafruit_feather_m0_proto.h  board_init.c
xdk-asf-3.51.0/sam0/boards/samd21_adafruit_feather_m0_proto/board_config/: conf_board.h
xdk-asf-3.51.0/sam0/utils/: compiler.h
xdk-asf-3.51.0/sam0/utils/cmsis/samd10/include/: samd10c14a.h
xdk-asf-3.51.0/sam0/utils/cmsis/samd10/source/gcc/: startup_samd10.c
xdk-asf-3.51.0/sam0/utils/make/: Makefile.sam.in
xdk-asf-3.52.0/common/boards/: board.h
xdk-asf-3.52.0/sam/boards/same70_xplained/: same70_xplained_ultra.h
xdk-asf-3.52.0/sam0/utils/: compiler.h
(+14 files in other folders)
